# twenty-ailab

./: CLAUDE.md
bridge/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml
bridge/app/: config.py  db.py  deps.py  logging_setup.py  main.py  ratelimit.py  security.py  structured_log.py
bridge/app/clients/: chatwoot_client.py  twenty_client.py
bridge/app/routers/: health.py  panel.py  webhooks.py
bridge/app/services/: sync.py
bridge/deploy/backups/: backup-twenty-bridge.sh  backup-twenty.sh  install-backups-twenty.sh  install-backups.sh  offsite-sync.sh  restore-drill-twenty.sh  saldo-backups-twenty.cron  saldo-backups.cron
bridge/deploy/k8s/: networkpolicy.yaml  twenty-bridge.yaml
bridge/scripts/: deploy_local_k3s.sh  k8s_create_secret.sh  orch-positive-b.sh  orch_positive_b.py  smoke_port_forward.sh
bridge/tests/: test_panel.py  test_ratelimit.py  test_security.py  test_sync.py
deploy/: .gitattributes  README.md  SERVER_ARCHITECTURE_twenty_section.md  deploy-twenty.sh  values-twenty-saldo.yaml
